--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@vendure/asset-server-plugin": "3.0.5",
     "@vendure/core": "3.0.5",
     "@vendure/email-plugin": "3.0.5",
-    "@vendure/ui-devkit": "^3.0.5",
     "dotenv": "16.4.5",
     "pg": "8.13.1"
   },
   "devDependencies": {
+    "@types/react": "18.3.12",
     "@vendure/cli": "3.0.5",
+    "@vendure/ui-devkit": "3.0.5",
     "concurrently": "9.0.1",
     "typescript": "5.3.3"
   }
