--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vendure/asset-server-plugin": "3.0.5",
     "@vendure/core": "3.0.5",
     "@vendure/email-plugin": "3.0.5",
+    "@vendure/harden-plugin": "^3.0.5",
     "dotenv": "16.4.5",
     "pg": "8.13.1"
   },
